fix bux not showing last timeline

--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,7 @@ a {
 
 .reveal {
   position: relative;
-  transform: translateY(150px);
+  transform: translateY(100px);
   opacity: 0;
   transition: 1s all ease;
 }
